--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <!-- Particle.js -->
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
+        <!-- Umami analytics -->
+        <script defer src="https://cloud.umami.is/script.js" data-website-id="fd8c5823-fc0d-4bcf-8cb2-baaabdc6db51"></script>
+
         <style>
             :root {
                 --accent: #ff7e5f;
