--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <p class="tagline">We collect, analyze, and make sense of data with cutting-edge technology and innovative solutions that drive business intelligence forward.</p>
 
             <div class="links">
-                <a href="https://pmdb.dev/" class="link" target="_blank">PMDb - Public Movie Database</a>
+                <a href="https://rapidapi.com/organization/octopusteam" class="link" target="_blank">RapidAPI</a>
                 <a href="https://www.kaggle.com/octopusteam" class="link" target="_blank">Kaggle</a>
                 <a href="https://github.com/OctopusTeamDev" class="link" target="_blank">GitHub</a>
             </div>
