--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
             <h1 class="title">OctopusTeam</h1>
 
-            <p class="tagline">We collect, analyze, and make sense of data with cutting-edge technology and innovative solutions that drive business intelligence forward.</p>
+            <p class="tagline">We collect, analyze, and make sense of data.</p>
 
             <div class="links">
                 <a href="https://rapidapi.com/organization/octopusteam" class="link" target="_blank">RapidAPI</a>
