--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>OctopusTeam</title>
-        <meta name="description" content="We collect, analyze, and make sense of data with cutting-edge technology.">
+        <meta name="description" content="We collect, analyze, and make sense of data.">
         <meta name="theme-color" content="#000000" />
         <link rel="canonical" href="https://octopusteam.dev/">
 
